# duet

./: .gitignore  LICENSE  README.md  duet.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN_isolate.md  DETECTED_ENV.md  PRODUCTION_HARDENING.md
duet/: __init__.py  adapters.py  broker.py  cli.py  config.py  control.py  repl.py  resumestate.py  sessions.py  transcript.py  verifiers.py  workspace.py
examples/: README.md  seed-demo-session.json  seed-demo-session.md
tests/: test_broker.py  test_capabilities.py  test_cli_battery.py  test_control.py  test_detect_connect.py  test_e2e.py  test_hardening.py  test_isolate.py  test_quota.py  test_resume.py  test_session_attach.py  test_stopconditions.py  test_transcript_prompting.py  test_v2_features.py  test_workspace.py
